@@ -1,3 +1,9 @@
+2007-02-15  Titus Brown  <t@localhost.localdomain>
+
+	* Fixed browser.get_form to only allow valid form numbers (Mariusz).
+
+	* Fixed showforms to properly display form numbers (Mariusz).
+
 2007-02-14  Titus Brown  <t@localhost.localdomain>
 
 	* Added a basic check for Web server to tests: tests no longer
